# Genetic-Art-Rust

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  plan.md
benches/: fitness_bench.rs
src/: evolution.rs  fitness.rs  lib.rs  main.rs  painting.rs  population.rs
src/genes/: circle.rs  mod.rs  triangle.rs
