[package]
name = "genetic-art-rust"
version = "0.1.0"
edition = "2021"

# Configure both binary (CLI) and library (algorithm core)
[[bin]]
name = "genetic-art"
path = "src/main.rs"

[lib]
name = "genetic_art"
path = "src/lib.rs"

[dependencies]
# Random number generation - Rust's std library is deterministic by design
# so we need an external crate for randomness
rand = "0.8"

# Data parallelism - makes parallel iteration as easy as changing .iter() to .par_iter()
# No manual thread management needed!
rayon = "1.8"

# Image processing - industry standard crates for loading, saving, and manipulating images
image = "0.24"
imageproc = "0.23"

# CLI argument parsing - provides type-safe command line arguments with derive macros
clap = { version = "4.4", features = ["derive"] }

# Progress bars - gives visual feedback during long-running operations
indicatif = "0.17"

# Serialization framework - allows saving/loading data structures as JSON
# The "derive" feature lets us auto-generate serialization code with #[derive(Serialize, Deserialize)]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SIMD operations - portable SIMD for stable Rust (Option 2 from AGENTS.md)
# Provides u8x16 vectors and saturating arithmetic for fast fitness calculation
wide = "0.7"

# Feature flags
[features]
default = ["simd"]
simd = []  # Enable SIMD optimizations (2-4× faster fitness calculation)

# Development dependencies (only used for testing and benchmarking)
[dev-dependencies]
criterion = "0.5"  # Benchmarking framework for performance testing

# Benchmark configuration
[[bench]]
name = "fitness_bench"
harness = false

# Release profile optimizations
# These settings prioritize runtime speed over compilation speed
[profile.release]
opt-level = 3       # Maximum optimization (0-3, where 3 is most aggressive)
lto = true          # Link-time optimization: optimize across crate boundaries (slower compile, faster binary)
codegen-units = 1   # Single compilation unit allows better optimization but slower compile
